tests/paczka1/fuzzy1/60311952.err
Error in line 6: Nazzye2 S523 50,0
Error in line 14: pZTLhEUOn S437 20,9
Error in line 5: Mpazdu2 A296 14,7
Error in line 15: pZTLhEUOn S534 88,6
Error in line 21: Nazzye2 A296 768
Error in line 8: Nazzye2 S437 0,1
